--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,16 @@
             <artifactId>spring-boot</artifactId>
             <version>2.4.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>1.14.3</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
+
 
     <build>
         <plugins>
